--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,29 @@
 {
   "name": "CSE-110_Lab8",
   "short_name": "Fong Yu Lin",
-  "description": "",
+  "description": "Lab 8 for CSE-110",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "",
+  "theme_color": "#2196F3",
   "icons": [
     {
-      "src": "./assets/images/icons/icon-192x192.png",
+      "src": "assets/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/icons/icon-256x256.png",
+      "src": "assets/images/icons/icon-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/icons/icon-384x384.png",
+      "src": "assets/images/icons/icon-384x384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "./assets/images/icons/icon-512x512.png",
+      "src": "assets/images/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
